PROJECT(testPlan)

SET(Boost_ADDITIONAL_VERSIONS "1.37" "1.37.0" "1.38" "1.38.0" "1.39" "1.39.0")
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

FIND_PACKAGE(BoostNumericBindings REQUIRED)
FIND_PACKAGE(BoostNumericBindingsIpp REQUIRED)
FIND_PACKAGE(Cgal REQUIRED)
FIND_PACKAGE(Coin REQUIRED)
FIND_PACKAGE(Iconv REQUIRED)
FIND_PACKAGE(Ipp REQUIRED)
FIND_PACKAGE(Libxml2 REQUIRED)
#FIND_PACKAGE(Ode REQUIRED)
#FIND_PACKAGE(Pqp REQUIRED)
FIND_PACKAGE(RlKin REQUIRED)
FIND_PACKAGE(RlMath REQUIRED)
FIND_PACKAGE(RlSg REQUIRED)
FIND_PACKAGE(RlUtil REQUIRED)
FIND_PACKAGE(RlXml REQUIRED)
FIND_PACKAGE(Solid REQUIRED)
FIND_PACKAGE(SoQt REQUIRED)
#FIND_PACKAGE(Swift++ REQUIRED)
FIND_PACKAGE(Zlib REQUIRED)

ADD_DEFINITIONS(
	-D_SCL_SECURE_NO_WARNINGS
	-DCOIN_NOT_DLL
	-DNOMINMAX
	-DSOQT_NOT_DLL
	${QT_DEFINITIONS}
	${RL_UTIL_DEFINITIONS}
)

INCLUDE_DIRECTORIES(
	BEFORE
	${rlplan_SOURCE_DIR}/../../
	${Boost_INCLUDE_DIR}
	${BOOSTNUMERICBINDINGS_INCLUDE_DIR}
	${BOOSTNUMERICBINDINGSIPP_INCLUDE_DIR}
	${CGAL_INCLUDE_DIRS}
	${COIN_INCLUDE_DIR}
	${ICONV_INCLUDE_DIR}
	${IPP_INCLUDE_DIR}
	${LIBXML2_INCLUDE_DIR}
#	${ODE_INCLUDE_DIR}
#	${PQP_INCLUDE_DIR}
	${QT_INCLUDES}
	${RL_KIN_INCLUDE_DIR}
	${RL_MATH_INCLUDE_DIR}
	${RL_SG_INCLUDE_DIR}
	${RL_UTIL_INCLUDE_DIR}
	${RL_XML_INCLUDE_DIR}
	${SOLID_INCLUDE_DIR}
	${SOQT_INCLUDE_DIR}
#	${SWIFTPP_INCLUDE_DIR}
	${ZLIB_INCLUDE_DIR}
)

SET(
	HDRS
	ConfigurationDelegate.h
	ConfigurationModel.h
	ConfigurationSpaceScene.h
	ConfigurationSpaceThread.h
	MainWindow.h
	Thread.h
	Viewer.h
)

SET(
	SRCS
	ConfigurationDelegate.cpp
	ConfigurationModel.cpp
	ConfigurationSpaceScene.cpp
	ConfigurationSpaceThread.cpp
	MainWindow.cpp
	testPlan.cpp
	Thread.cpp
	Viewer.cpp
)

QT4_WRAP_CPP(
	MOC_SRCS
	ConfigurationDelegate.h
	ConfigurationSpaceScene.h
	ConfigurationSpaceThread.h
	MainWindow.h
	Thread.h
	Viewer.h
)

ADD_EXECUTABLE(
	testPlan
	${HDRS}
	${SRCS}
	${MOC_SRCS}
)

TARGET_LINK_LIBRARIES(
	testPlan
	rlplan
	${CGAL_LIBRARY}
	${COIN_LIBRARY}
	${IPP_LIBRARIES}
	${LIBXML2_LIBRARY}
#	${ODE_LIBRARY}
#	${PQP_LIBRARY}
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_QTOPENGL_LIBRARY}
	${RL_KIN_LIBRARY}
	${RL_SG_LIBRARY}
	${SOLID_LIBRARY}
	${SOQT_LIBRARY}
#	${SWIFTPP_LIBRARY}
)
